Bug 933131 - Message report panel implementation

--- a/apps/sms/locales/sms.en-US.properties
+++ b/apps/sms/locales/sms.en-US.properties
@@ -69,6 +69,25 @@ participant[few]     = {{n}} participants
 participant[many]    = {{n}} participants
 participant[other]   = {{n}} participants
 
+# Message report
+message-report          = Message report
+message-type-sms        = Text Message (SMS)
+message-type-mms        = Multimedia Message (MMS)
+sms-report-description  = Your Text Message (SMS), was sent on {{datetime}}
+mms-report-description  = Your Multimedia Message (MMS), subject {{subject}}, was sent on {{datetime}}
+mms-no-subject-report-description = Your Multimedia Message (MMS), was sent on {{datetime}}
+message-status          = Status:
+message-status-sent     = sent
+message-status-received = received
+message-status-sending  = sending
+message-status-error    = error
+message-status-not-downloaded = not downloaded
+message-delivered       = Delivered:
+message-read            = Read report:
+message-requested       = Requested
+message-size-was        = Message size:
+report-dateTimeFormat   = %e %B %Y, {{shortTimeFormat}}
+
 # Search functionality
 search          = Search
 unknown-contact = Unknown
@@ -133,7 +152,7 @@ unsent-message-option-edit  = Edit
 unsent-message-option-discard = Discard
 message-options             = Message options
 forward                     = Forward
-
+view-message-report         = View message report
 # Labels for contact fields
 mobile    = Mobile
 home      = Home
