auto resize font to get more room

--- a/apps/settings/locales/settings.en-US.properties
+++ b/apps/settings/locales/settings.en-US.properties
@@ -1,4 +1,4 @@
-settings=Settings
+settings=Settings Settings Settings Settings
 advancedSettings=Advanced settings
 default=Default
 enabled=Enabled
