Bug 937443. Make changes in app HTML files and settings.en-US.properties.

--- a/apps/settings/locales/settings.en-US.properties
+++ b/apps/settings/locales/settings.en-US.properties
@@ -309,7 +309,7 @@ wifi-security=Security
 usb-tethering=USB tethering
 hotspotSettings=Hotspot settings
 ssid-name=SSID network name
-hotspot-open=open
+hotspot-open=Open
 hotspot-wpa-psk=WPA (TKIP)
 hotspot-wpa2-psk=WPA2 (AES)
 
@@ -338,8 +338,8 @@ alerts=Alerts
 unlock-screen=Unlock screen
 camera-shutter=Camera shutter
 camera-recordingsound=Video recording
-sent-mail=Sent Mail
-sent-message=Sent Message
+sent-mail=Sent mail
+sent-message=Sent message
 alarm-sound=Alarm
 ringer-and-notification-sound=Ringer & Notifications
 voice-sound=Voice
@@ -357,7 +357,7 @@ one-minute   =  1 minute
 two-minutes  =  2 minutes
 five-minutes =  5 minutes
 ten-minutes  = 10 minutes
-never=never
+never=Never
 lock-orientation=Lock orientation
 
 # Personalization :: Notifications
@@ -621,7 +621,7 @@ platform_version=Platform version
 build-id=Build Identifier
 update-channel=Update channel
 last-updated=Last Updated
-more-info=More Information
+more-info=More information
 gitInfo=Git commit info
 softwareUpdates=Software updates
 check-update-daily     = Daily
@@ -638,21 +638,21 @@ check-error            = There was an error when checking for updates.
 aboutBrowserOS  = About {{brandShortName}}
 browser-os-desc = {{brandShortName}} is the free and open source operating system from Mozilla. Our mission is to promote openness, innovation and opportunity by keeping the power of the Web in your hands.
 learn-more=Learn More
-reset-phone=Reset Phone
+reset-phone=Reset phone
 reset-warning-1= CAUTION: Resetting will erase all your data, including any apps you’ve purchased.
 reset-warning-2= The phone will be restored to its factory condition. None of your settings or data will be saved.
 # LOCALIZATION NOTE: the licensing* strings below aren’t ready for translation yet.
-your-rights = Your Rights
+your-rights = Your rights
 about-your-rights-0 = {{brandShortName}} is built on free and open source software by a community of thousands from all over the world. There are a few things you should know:
 about-your-rights-1 = {{brandShortName}} is made available to you under the terms of several open source licenses including the Mozilla Public License. A device running {{brandShortName}} may also contain proprietary software from third parties. Any code provided under open licenses give you the right to modify the source code and distribute your modified versions as long as you comply with their terms.
 about-your-rights-2 = You are not granted any trademark rights or licenses to the trademarks of the Mozilla Foundation or any party, including without limitation the {{brandShortName}} name or logo.
 about-your-rights-3 = Some features in {{brandShortName}}, such as the Crash Reporter, give you the option to provide feedback to Mozilla. By choosing to submit feedback, you give Mozilla permission to use the feedback to improve its products, to publish the feedback on its websites, and to distribute the feedback.
-about-legal-info    = Legal Information
-open-source-notices = Open Source Notices
-obtaining-source-code = Obtaining Source Code
+about-legal-info    = Legal information
+open-source-notices = Open source notices
+obtaining-source-code = Obtaining source code
 about-mozilla = Mozilla
 about-other   = Other
-your-privacy = Your Privacy
+your-privacy = Your privacy
 licensing-1      = Binaries of this product have been made available to you by the Mozilla Project, under the Mozilla Public License 2.0 (MPL). Know your rights.
 licensing-2      = All of the source code to this product is available under licenses that are both free and open source. Most of it is available under the Mozilla Public License 2.0 (MPL).
 licensing-3      = The remainder of the software that is not under the Mozilla Public License 2.0 MPL is available under one of a variety of other licenses. Those that require reproduction of the license text in the distribution are given below. (Note: Your copy of this product may not contain code covered by one or more of the licenses listed here, depending on the exact product and version you choose.)
@@ -683,7 +683,7 @@ screenReader=Screen reader
 
 # Device :: Improve Browser OS
 improveBrowserOS=Improve {{brandShortName}}
-sendMozillaFeedback=Send Mozilla Feedback
+sendMozillaFeedback=Send Mozilla feedback
 performanceData=Performance data
 performanceDataInfo=Help us improve {{brandShortName}} by sharing data about your phone.
 sharePerformanceData=Submit performance data
@@ -716,7 +716,7 @@ feedback-public-description=The content of your feedback will be public, so plea
 feedback-contactyou=Check here to let us contact you from your email.
 email-address1=Email address:
 email-keepprivate=Don't worry. Your email will always be kept private.
-feedback-sendbtn=Send Feedback
+feedback-sendbtn=Send feedback
 feedback-errormessage-connect-error=Sorry, the system can't send your suggestion due to a data connection error. Please try again when the issue is resolved.
 feedback-errormessage-server-off=Sorry, the system can't send your suggestion because the server shut down. Please wait a moment and try again.
 feedback-errormessage-timeout=Sorry, the system can't send your suggestion because of a timeout. Please restart and try again.
