--- a/locales/languages_all.json
+++ b/locales/languages_all.json
@@ -36,6 +36,7 @@
   "kn"        : "ಕನ್ನಡ",
   "ko"        : "한국어",
   "lij"       : "Ligure",
+  "lv"        : "Latviešu",
   "ml"        : "മലയാളം",
   "ms"        : "Melayu",
   "ne-NP"     : "नेपाली",
