--- a/apps/gallery/locales/gallery.en-US.properties
+++ b/apps/gallery/locales/gallery.en-US.properties
@@ -46,6 +46,7 @@ square    = Square
 
 emptygallery2-title = No photos or videos
 emptygallery2-text  = Use the Camera app to get started.
+emptygallery2-title-pick = No photos
 
 nocard3-title = No memory card
 nocard3-text  = Insert a memory card to use this app or select an alternate default media location in settings.
