Revert "Remove . after month name in status bar"
This reverts commit 019f5dae4b4e398d4d4c1e17f24dbeef13c8bdf7.

--- a/apps/system/locales/system.en-US.properties
+++ b/apps/system/locales/system.en-US.properties
@@ -22,7 +22,7 @@ enterPIN=Enter PIN
 # status bar text label
 statusbarLabel={{date}}, {{operator}}
 # see http://pubs.opengroup.org/onlinepubs/007908799/xsh/strftime.html
-statusbarDateFormat=%b %e
+statusbarDateFormat=%b. %e
 # either 24-hour format (%H:%M) or 12-hour without AM/PM (%I:%M)
 statusbarTimeFormat=%I:%M
 
