Bug 942325 - update the style of net_error page when in an iframe

--- a/apps/system/locales/system.en-US.properties
+++ b/apps/system/locales/system.en-US.properties
@@ -177,6 +177,8 @@ airplane-is-on=Airplane mode is on
 airplane-is-turned-on={{name}} requires a network connection. Turn off airplane mode from Settings and connect to a Wi-Fi or mobile data network.
 network-connection-unavailable=Network connection unavailable
 network-error={{name}} requires a network connection. Try connecting to a Wi-Fi or mobile data network.
+unable-to-connect=Unable to connect
+tap-to-retry=Tap to retry
 try-again=Try again
 
 # value selector, time/date picker
