--- a/apps/communications/dialer/locales/dialer.en-US.properties
+++ b/apps/communications/dialer/locales/dialer.en-US.properties
@@ -1,6 +1,11 @@
+addNewNumber=Add new number
 addToExistingContact=Add to existing contact
 all=All
+all.ariaLabel=All
+asterisk.ariaLabel=Asterisk
 callLog=Call log
+callLogEdit.title=Edit call log
+callLogEditDialog.ariaLabel=Edit call log dialog
 connecting=Connecting
 cancel=Cancel
 ## LOCALIZATION NOTE cf-async, cf-data, cf-fax, cf-packet, cf-pad, cf-sms, cf-sync and cf-voice are the service the call forwarding is activate/inactive for.
@@ -16,10 +21,14 @@ cf-sms=SMS: {{ sms }}\n
 cf-status=Call forwarding status\n
 cf-sync=Synchronous: {{ sync }}\n
 cf-voice=Voice: {{ voice }}\n
+close=Close
 confirm-deletion=Clear selected calls?
+contacts.ariaLabel=Contacts
 createNewContact=Create new contact
 delete=Delete
 deselectAll=Deselect all
+dialerAddContact.ariaLabel=Add contact
+dialerAddContactDialog.ariaLabel=Add Contact Dialog
 edit-selected={[ plural(n) ]}
 edit-selected[one]   = {{ n }} selected
 edit-selected[two]   = {{ n }} selected
@@ -27,28 +36,44 @@ edit-selected[few]   = {{ n }} selected
 edit-selected[many]  = {{ n }} selected
 edit-selected[other] = {{ n }} selected
 edit=Edit
-ignore=Ignore Call
+hangup.ariaLabel=Hangup
+hashSign.ariaLabel=Hash sign
+hideBar.ariaLabel=Hide bar
+hideKeypad.ariaLabel=Hide keypad
+ignore=Ignore
 incoming=Incoming
+keypad.ariaLabel=Keypad
+keypadDelete.ariaLabel=Delete
+makeCall.ariaLabel=Make call
+merge=Merge
 missed=Missed
+missed.ariaLabel=Missed
 missedCall=Missed call
 mmi-error=An error occurred while sending the message
 mmi-session-expired=Session expired
 mmi-successfully-sent=Message successfully sent
+mute.ariaLabel=Mute
+newCall.ariaLabel=New call
 no-logs-msg-1=No calls recorded
 no-logs-msg-2=Start communicating now
 no-logs-msg-3=No missed calls
+phoneNumberInput.ariaLabel=Phone number
+recents.ariaLabel=Recent calls
 reply=Reply
 selectAll=Select all
 send=Send
 switch-calls=Switch calls
 today=Today
+voiceMailKey.ariaLabel = Voicemail
 withheld-number=Withheld number
 from-contact=From {{ contact }}
 from-number=From {{ number }}
 from-withheld-number=From withheld number
 yesterday=Yesterday
 sending=Sending…
+speaker.ariaLabel=Speaker
 ussd-services={{ operator }} services
+toggleKeypad.ariaLabel=Toggle keypad
 type-your-response.placeholder=Type your response…
 clear-all-text=Clear all text
 hide=Hide
@@ -56,13 +81,14 @@ hide=Hide
 call=Call
 hold=Hold
 resume=Resume
+resume.ariaLabel=Resume
 sendSms=Send Message
 callEnded=Call Ended
 
 ## LOCALIZATION NOTE: these labels aren't displayed but they're used for acessibility
-hangup-a11y-button.aria-label=Hang Up
-pickup-a11y-button.aria-label=Pick up
-unlock-a11y-button.aria-label=Slider
+hangup-a11y-button.ariaLabel=Hang Up
+pickup-a11y-button.ariaLabel=Pick up
+unlock-a11y-button.ariaLabel=Slider
 
 settings=Settings
 
