Bug 945544 - [e-mail][user story] Support Empty Trash for POP3. SANS GELAM CHANGES

--- a/apps/email/locales/email.en-US.properties
+++ b/apps/email/locales/email.en-US.properties
@@ -329,6 +329,19 @@ messages-folder-empty=No mail in this Folder
 messages-search-empty=No matches in locally cached messages
 messages-folder-select=Select folder
 
+# In the trash folder (currently only for POP3 accounts) we display a bar in
+# the scrollable area of the message list that allows the user to empty the
+# trash.  A confirmation dialog is displayed, see the next strings.
+messages-empty-trash-bar=Empty Trash
+# The label for the trash emptying modal confirmation dialog.
+messages-empty-trash-confirm-label=Empty Trash
+# The prompt messages for the trash emptying modal confirmation dialog.
+messages-empty-trash-confirm-prompt=Delete all email messages in the trash folder?
+# Cancellation button label for the trash emptying modal dialog.
+messages-empty-trash-confirm-cancel=Cancel
+# "Yes, empty the trash" button label for the trash emptying modal dialog.
+messages-empty-trash-confirm-delete=Delete
+
 message-contact-menu-create=Save new contact
 message-contact-menu-add-existing=Add to existing contact
 message-contact-menu-view=View contact
