Bug 945544 - [e-mail][user story] Support Empty Trash for POP3. SANS GELAM CHANGES

--- a/apps/email/locales/email.en-US.properties
+++ b/apps/email/locales/email.en-US.properties
@@ -385,6 +385,16 @@ folder-junk=Junk
 folder-archives=Archives
 folder-localdrafts=Local Drafts
 
+# The label for the trash emptying modal confirmation dialog.
+folder-empty-trash-confirm-label=Empty Trash
+# The prompt messages for the trash emptying modal confirmation dialog.
+folder-empty-trash-confirm-prompt=Delete all email messages in the trash folder?
+# Cancellation button label for the trash emptying modal dialog.
+folder-empty-trash-confirm-cancel=Cancel
+# "Yes, empty the trash" button label for the trash emptying modal dialog.
+folder-empty-trash-confirm-delete=Delete
+
+
 toaster-undo=Undo
 toaster-retry=Retry
 toaster-message-star={[ plural(n) ]}
