--- a/apps/system/locales/system.en-US.properties
+++ b/apps/system/locales/system.en-US.properties
@@ -280,6 +280,7 @@ simPinIntro1=A SIM PIN prevents access to the SIM card cellular data networks. W
 simPinIntro2=A SIM PIN is not the same as the passcode used to unlock the device.
 changeSimPin=Change PIN
 pinTitle=Enter SIM PIN
+multiSIMpinTitle=Enter SIM {{n}} PIN
 pukTitle=Enter PUK code
 nckTitle=Enter NCK code
 cckTitle=Enter CCK code
