Bug 935100 - [Download Manager] Download list edit mode r=kaze, arcturus

--- a/apps/settings/locales/settings.en-US.properties
+++ b/apps/settings/locales/settings.en-US.properties
@@ -778,3 +778,12 @@ stkItemsNaiReceiveData=Receive Data
 stkItemsNaiSendData=Send Data
 stkItemsNaiGetChannelStatus=Get Channel Status
 
+#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#
+# Downloads
+#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#
+
+downloads-edit=Edit downloads
+downloads-select-all=Select all
+downloads-deselect-all=Deselect all
+downloads-delete=Delete
+
