--- a/apps/settings/locales/settings.en-US.properties
+++ b/apps/settings/locales/settings.en-US.properties
@@ -48,7 +48,7 @@ shortStatus-connectingfailed = Connection failed
 shortStatus-disconnected     = Offline
 manageNetworks=Manage networks
 manageCertificates=Manage certificates
-manageCert=Manage Cert.
+manageCert=Manage cert.
 joinHiddenNetwork=Join hidden network
 securedBy=Secured by {{capabilities}}
 security     = Security
@@ -70,7 +70,7 @@ authentication=Authentication
 eap=EAP method
 auth-phase2=Phase 2 authentication
 server-certificate=Server certificate
-import-certificate-msg=Notice: If you need to import new certificates, please go to “Manage certificates".
+import-certificate-msg=Notice: if you need to import new certificates, please go to “Manage certificates".
 identity=Identifier
 password=Password
 showPassword=Show password
@@ -114,11 +114,11 @@ wpsCancelMessage=Cancel WPS
 wpsCancelFailedMessage=Failed to cancel WPS
 
 # Connectivity :: Call
-callSettings=Call Settings
+callSettings=Call settings
 callSettingsQuery=Requesting network info…
 callSettingsQueryError=Error in query
 voiceMail=Voicemail
-voiceMail-number=Voicemail Number
+voiceMail-number=Voicemail number
 voiceMail-number-notSet=Not set
 voicePrivacyMode=Voice privacy mode
 callWaiting=Call waiting
@@ -178,7 +178,7 @@ fdnAction-delete=Delete contact
 
 
 # Connectivity :: Messaging
-messagingSettings=Messaging Settings
+messagingSettings=Messaging settings
 message-confirmation = Message confirmation
 message-delivery-reports = Delivery reports
 message-delivery-reports-details = Request notification of delivery for each message sent
@@ -189,8 +189,8 @@ manual-retrieve               = Off
 auto-roaming-retrieve         = On with roaming
 auto-no-roaming-retrieve      = On without roaming
 autoConfigure=Auto-configure
-wapPushMessages= WAP Push messages
-wapPush=WAP Push
+wapPushMessages= WAP push messages
+wapPush=WAP push
 cellBroadcastMessages=Cell broadcast messages
 cellBroadcast=Cell broadcast
 
@@ -283,7 +283,7 @@ device-status-connected-phone-media = Connected to phone/media audio
 device-option-unpair      = Unpair
 device-option-confirm     = Confirm
 device-option-unpair-confirmation = Confirmation
-device-option-unpair-device = Unpair Device?
+device-option-unpair-device = Unpair device?
 device-option-connect     = Connect
 device-option-disconnect  = Disconnect
 search-for-device   = Searching for devices…
@@ -308,7 +308,7 @@ error-connect-title   = Unable to connect devices
 error-connect-msg     = Check that the device you’re trying to connect with is still in range and has Bluetooth turned on.
 unpair-title = Unpair a connected device?
 unpair-msg   = You are currently connected to this device. Unpairing will also disconnect from it.
-pair-view-title = Bluetooth Request From
+pair-view-title = Bluetooth request from
 
 # Connectivity :: NFC
 nfc = NFC
@@ -357,8 +357,8 @@ alerts=Alerts
 unlock-screen=Unlock screen
 camera-shutter=Camera shutter
 camera-recordingsound=Video recording
-sent-mail=Sent Mail
-sent-message=Sent Message
+sent-mail=Sent mail
+sent-message=Sent message
 alarm-sound=Alarm
 ringer-and-notification-sound=Ringer & Notifications
 voice-sound=Voice
@@ -397,7 +397,7 @@ selectTimezone=Select time zone
 languageAndRegion=Language & Region
 language=Language
 region=Region
-sample-format=Sample Format
+sample-format=Sample format
 # see http://www.cplusplus.com/reference/clibrary/ctime/strftime/
 longDateFormat=%A, %B %d, %Y
 
@@ -481,7 +481,7 @@ vibrate=Vibrate
 ring=Ring
 change=Change
 create=Create
-create-a-passcode=Create a Passcode
+create-a-passcode=Create a passcode
 passcode-heading=Passcode
 enter-passcode=Enter passcode
 new-passcode=New passcode
@@ -597,13 +597,13 @@ ums-shared-volumes = {{list}} shared
 
 # Storage :: Media storage
 mediaStorage=Media storage
-internalStorage=Internal Storage
+internalStorage=Internal storage
 storage-name-internal  = Internal Storage
-storage-name-external-0  = SD Card Storage
-storage-name-external-1  = SD Card Storage 2
+storage-name-external-0  = SD card storage
+storage-name-external-1  = SD card storage 2
 short-storage-name-internal  = Internal
-short-storage-name-external-0  = SD Card
-short-storage-name-external-1  = SD Card 2
+short-storage-name-external-0  = SD card
+short-storage-name-external-1  = SD card 2
 music-space=Music
 pictures-space=Pictures
 videos-space=Movies
@@ -639,7 +639,7 @@ software=Software
 devSettings=Developer settings
 debug=Debug
 grid=Grid
-developer-menu=Developer Menu
+developer-menu=Developer menu
 fps-monitor=Show frames per second
 layers-draw-borders=Draw layers borders
 paint-flashing=Flash repainted area
@@ -656,10 +656,10 @@ os-version=OS version
 firmware_revision=Firmware revision
 hardware_revision=Hardware revision
 platform_version=Platform version
-build-id=Build Identifier
+build-id=Build identifier
 update-channel=Update channel
-last-updated=Last Updated
-more-info=More Information
+last-updated=Last updated
+more-info=More information
 gitInfo=Git commit info
 softwareUpdates=Software updates
 check-update-daily     = Daily
@@ -675,22 +675,22 @@ already-latest-version = This is already the latest version of {{brandShortName}
 check-error            = There was an error when checking for updates.
 aboutBrowserOS  = About {{brandShortName}}
 browser-os-desc = {{brandShortName}} is the free and open source operating system from Mozilla. Our mission is to promote openness, innovation and opportunity by keeping the power of the Web in your hands.
-learn-more=Learn More
-reset-phone=Reset Phone
+learn-more=Learn more
+reset-phone=Reset phone
 reset-warning-title= CAUTION
 reset-warning-body= Resetting will erase all your data, including any apps you’ve purchased. The phone will be restored to its factory condition. None of your settings or data will be saved.
 # LOCALIZATION NOTE: the licensing* strings below aren’t ready for translation yet.
-your-rights = Your Rights
+your-rights = Your rights
 about-your-rights-0 = {{brandShortName}} is built on free and open source software by a community of thousands from all over the world. There are a few things you should know:
 about-your-rights-1 = {{brandShortName}} is made available to you under the terms of several open source licenses including the Mozilla Public License. A device running {{brandShortName}} may also contain proprietary software from third parties. Any code provided under open licenses give you the right to modify the source code and distribute your modified versions as long as you comply with their terms.
 about-your-rights-2 = You are not granted any trademark rights or licenses to the trademarks of the Mozilla Foundation or any party, including without limitation the {{brandShortName}} name or logo.
 about-your-rights-3 = Some features in {{brandShortName}}, such as the Crash Reporter, give you the option to provide feedback to Mozilla. By choosing to submit feedback, you give Mozilla permission to use the feedback to improve its products, to publish the feedback on its websites, and to distribute the feedback.
-about-legal-info    = Legal Information
+about-legal-info    = Legal information
 open-source-notices = Open Source Notices
-obtaining-source-code = Obtaining Source Code
+obtaining-source-code = Obtaining source code
 about-mozilla = Mozilla
 about-other   = Other
-your-privacy = Your Privacy
+your-privacy = Your privacy
 licensing-1      = Binaries of this product have been made available to you by the Mozilla Project, under the Mozilla Public License 2.0 (MPL). Know your rights.
 licensing-2      = All of the source code to this product is available under licenses that are both free and open source. Most of it is available under the Mozilla Public License 2.0 (MPL).
 licensing-3      = The remainder of the software that is not under the Mozilla Public License 2.0 MPL is available under one of a variety of other licenses. Those that require reproduction of the license text in the distribution are given below. (Note: Your copy of this product may not contain code covered by one or more of the licenses listed here, depending on the exact product and version you choose.)
@@ -721,7 +721,7 @@ screenReader=Screen reader
 
 # Device :: Improve Browser OS
 improveBrowserOS=Improve {{brandShortName}}
-sendMozillaFeedback=Send Mozilla Feedback
+sendMozillaFeedback=Send Mozilla feedback
 performanceData=Performance data
 performanceDataInfo=Help us improve {{brandShortName}} by sharing data about your phone.
 sharePerformanceData=Submit performance data
@@ -742,7 +742,7 @@ crash-reports-description-3-privacy=privacy policy
 crash-reports-description-3-end=.
 
 # Device :: Improve Browser OS :: Submit Your Feedback
-sendFeedbackTitle=Submit Your Feedback
+sendFeedbackTitle=Submit your feedback
 feedback-description=Your feedback will help us to improve Firefox OS.
 feedback-happy=Happy
 feedback-sad=Sad
@@ -754,7 +754,7 @@ feedback-public-description=The content of your feedback will be public, so plea
 feedback-contactyou=Check here to let us contact you from your email.
 email-address1=Email address:
 email-keepprivate=Don't worry. Your email will always be kept private.
-feedback-sendbtn=Send Feedback
+feedback-sendbtn=Send feedback
 feedback-errormessage-connect-error=Sorry, the system can't send your suggestion due to a data connection error. Please try again when the issue is resolved.
 feedback-errormessage-server-off=Sorry, the system can't send your suggestion because the server shut down. Please wait a moment and try again.
 feedback-errormessage-timeout=Sorry, the system can't send your suggestion because of a timeout. Please restart and try again.
@@ -770,7 +770,7 @@ user-guide=User guide
 default-support=Please contact your local provider for support.
 
 # Device :: SIM toolkit
-operatorServices=Operator Services
+operatorServices=Operator services
 operatorServices-help=Help
 operatorServices-helpmenu=Help menu
 stkAppsNotAvailable=SIM card applications not available.
@@ -783,17 +783,17 @@ stkItemsNaiSendUssd=Send USSD
 stkItemsNaiSendSms=Send SMS
 stkItemsNaiSendDtmf=Send DTMF
 stkItemsNaiLaunchBrowser=Launch Browser
-stkItemsNaiPlayTone=Play Tone
-stkItemsNaiDisplayText=Display Text
+stkItemsNaiPlayTone=Play tone
+stkItemsNaiDisplayText=Display text
 stkItemsNaiGetInkey=Get Inkey
-stkItemsNaiGetInput=Get Input
-stkItemsNaiSelectItem=Select Item
-stkItemsNaiSetUpMenu=Set Up Menu
-stkItemsNaiProvideLocalInfo=Provide Local Info
-stkItemsNaiSetIdleModeText=Set Idle Mode Text
-stkItemsNaiOpenChannel=Open Channel
-stkItemsNaiCloseChannel=Close Channel
-stkItemsNaiReceiveData=Receive Data
-stkItemsNaiSendData=Send Data
-stkItemsNaiGetChannelStatus=Get Channel Status
+stkItemsNaiGetInput=Get input
+stkItemsNaiSelectItem=Select item
+stkItemsNaiSetUpMenu=Set up menu
+stkItemsNaiProvideLocalInfo=Provide local info
+stkItemsNaiSetIdleModeText=Set idle mode text
+stkItemsNaiOpenChannel=Open channel
+stkItemsNaiCloseChannel=Close channel
+stkItemsNaiReceiveData=Receive data
+stkItemsNaiSendData=Send data
+stkItemsNaiGetChannelStatus=Get channel status
 
