Bug 948979 - [Download Manager] A wrong message is displayed if you try to open a file while the device is connected as USB storage

--- a/shared/locales/download/download.en-US.properties
+++ b/shared/locales/download/download.en-US.properties
@@ -29,6 +29,14 @@ file_not_found_download_title                  = File not found
 file_not_found_download_message                = The file wasn’t found on the device
 file_not_found_download_right_button           = OK
 
+unmounted_sdcard_download_title                = Unable to open
+unmounted_sdcard_download_message              = Memory card in use
+unmounted_sdcard_download_right_button         = OK
+
+no_sdcard_download_title                       = Unable to open
+no_sdcard_download_message                     = No memory card inserted
+no_sdcard_download_right_button                = OK
+
 file_open_error_download_title                 = Unable to open
 file_open_error_download_message               = There is a problem opening {{name}}. Would you like to save the file or delete it?
 file_open_error_download_left_button           = Keep File
