--- a/apps/email/locales/email.en-US.properties
+++ b/apps/email/locales/email.en-US.properties
@@ -96,6 +96,7 @@ setup-manual-config2=Manual setup
 setup-manual-config-header=Manual Setup
 setup-manual-account-type=Account type
 setup-manual-imap-header=IMAP settings
+setup-manual-pop3-header=POP3 settings
 setup-manual-smtp-header=SMTP settings
 setup-manual-activesync-header=ActiveSync settings
 setup-manual-next=Next
