Bug 951128 - Travis pulls wrong gecko version for 1.3 branch r=gwagner

--- a/tests/travis_ci/test_agent/install
+++ b/tests/travis_ci/test_agent/install
@@ -1,8 +1,8 @@
 #! /bin/bash -ve
 echo 'Downloading Firefox'
 ./node_modules/.bin/mozilla-download --product firefox \
-                 --channel tinderbox \
-                 --branch mozilla-central \
+                 --channel prerelease \
+                 --branch aurora \
                  $PWD/firefox
 
 echo 'Downloading & installing node dependencies'
