--- a/apps/system/locales/system.en-US.properties
+++ b/apps/system/locales/system.en-US.properties
@@ -408,3 +408,6 @@ download_finalized=Download failed
 
 download_text_by_default={{name}}
 download_downloading_text={{name}} - {{percentage}} %
+
+# Rocketbar
+search-or-type-address.placeholder=Search or type address
