Bug 950469 - [Setringtone][l12y] 'Set as ringtone' string is reused on title and button

--- a/apps/setringtone/locales/setringtone.en-US.properties
+++ b/apps/setringtone/locales/setringtone.en-US.properties
@@ -1,4 +1,10 @@
 setringtone = Set as ringtone
+# LOCALIZATION NOTE (setringtone-button): if you leave the original
+# en-US value "{{setringtone}}" in the following string, the localization
+# will be automatically picked from the existing string with ID "setringtone".
+# If you need to adapt your localization to the reduced space available
+# in the button, you can use a shorter string here.
+setringtone-button = {{setringtone}}
 cancel = Cancel
 settingringtone = Setting ringtone…
 cantplay = The audio file cannot be played on this phone and can not be used as a ringtone.
