Bug 949366 - [Download Manager] Stopped and failed downloads are displayed as canceled

--- a/shared/locales/download/download.en-US.properties
+++ b/shared/locales/download/download.en-US.properties
@@ -57,6 +57,5 @@ partialResult={{partial}} of {{total}}
 summary={{date}} - {{status}}
 
 # States
-stopped=Canceled
-downloadFailed=Download failed
-complete=Complete
+download-stopped              = Stopped
+download-failed               = Download failed
