--- a/shared/locales/download/download.en-US.properties
+++ b/shared/locales/download/download.en-US.properties
@@ -33,9 +33,9 @@ unmounted_sdcard_download_title                = Unable to open
 unmounted_sdcard_download_message              = Memory card in use
 unmounted_sdcard_download_right_button         = OK
 
-no_sdcard_download_title                       = Unable to open
-no_sdcard_download_message                     = No memory card inserted
-no_sdcard_download_right_button                = OK
+no_sdcard_found_download_title                 = Unable to open
+no_sdcard_found_download_message               = No memory card found
+no_sdcard_found_download_right_button          = OK
 
 file_open_error_download_title                 = Unable to open
 file_open_error_download_message               = There is a problem opening {{name}}. Would you like to save the file or delete it?
