--- a/apps/video/locales/video.en-US.properties
+++ b/apps/video/locales/video.en-US.properties
@@ -24,7 +24,7 @@ empty-title = Add videos to get started
 empty-text  = Load videos on to the memory card.
 
 nocard2-title = No memory card found
-nocard2-text  = Insert a memory card to watch videos or select an alternate default media location in settings.
+nocard2-text  = Insert a memory card to watch videos
 
 pluggedin-title = Video can not be watched while plugged in
 pluggedin-text  = Unplug the phone to watch videos.
@@ -46,6 +46,8 @@ error-unsupported = Video cannot be played: either because the server or network
 error-unknown = An unknown video error occurred.
 
 storage-setting-button = Media storage settings
+overlay-cancel-button = Cancel
+overlay-camera-button = Go to Camera
 
 name-label = Name
 length-label = Length
