Bug 892950 - error-network message can use better English

--- a/apps/video/locales/video.en-US.properties
+++ b/apps/video/locales/video.en-US.properties
@@ -41,7 +41,7 @@ pick-title = Select a video
 save  = Save
 saved = Saved {{title}} to Video
 
-error-network = A network error caused the video failed to download.
+error-network = Video could not be downloaded because of network error.
 error-unsupported = Video cannot be played: either because the server or network failed or because the format is not supported.
 error-unknown = An unknown video error occurred.
 
