Bug 952805 - [Usage][l12y] wifi-usage and mobile-usage are reused in different contexts

--- a/apps/costcontrol/locales/costcontrol.en-US.properties
+++ b/apps/costcontrol/locales/costcontrol.en-US.properties
@@ -146,8 +146,17 @@ data-limit-dialog-title2 = Enter a mobile data limit alert
 data-limit-dialog-explanation2 = Connection speeds reduce after the limit is reached. Check with your data provider to set an appropriate alert level.
 3g-data-usage = 3G data usage
 3g-usage = 3G usage
+
+# LOCALIZATION NOTE (wifi-usage, mobile-usage): these strings are displayed in
+# the main window
 wifi-usage = Wi-Fi usage
 mobile-usage = Mobile usage
+
+# LOCALIZATION NOTE (wifi-usage-settings, mobile-usage-settings): these strings
+# are displayed in the Settings section
+wifi-usage-settings = Wi-Fi usage
+mobile-usage-settings = Mobile usage
+
 select-plan-type = Select your plan type
 im-prepaid = I’m Pre-paid
 im-prepaid-controle = I’m Pre-paid / Controle
