Bug 952836 - [Gaia][l10n][en-US] Typography consistency: curly single quote ’ vs. straight single quote '

--- a/apps/costcontrol/locales/costcontrol.en-US.properties
+++ b/apps/costcontrol/locales/costcontrol.en-US.properties
@@ -29,7 +29,7 @@ widget-sim-locked-meta = Unlock your SIM to enable Usage.
 fte = Usage First Time Experience
 fte-authed-sim = Save money by keeping track of your phone and internet usage.
 fte-nonauthed-sim = Save money by keeping track of your internet usage.
-fte-no-sim = Get clear information about how much internet you're using.
+fte-no-sim = Get clear information about how much internet you’re using.
 # Here Usage is the name of the application
 fte-sim-info2 = Information shown on Usage comes directly from this device. Check with your mobile service provider for detailed account information.
 
@@ -173,7 +173,7 @@ new-sim-inserted-carrier = New {{carrier}} SIM inserted
 new-sim-inserted-all-available = Setup phone and data report
 new-sim-inserted-only-data-available = Phone report unavailable, setup data report
 data-limit-notification-title2 = {{limit}} of data used
-data-limit-notification-text2 = You've reached the limit you selected
+data-limit-notification-text2 = You’ve reached the limit you selected
 low-balance-notification-title = Low balance
 low-balance-notification-text = {{remaining}} remaining phone credit
 zero-balance-message = Balance has reached zero, no phone credit remaining.
