--- a/apps/email/locales/email.en-US.properties
+++ b/apps/email/locales/email.en-US.properties
@@ -45,7 +45,7 @@ setup-error-bad-user-or-pass2=Invalid username or password. Check for typos.
 # server.  This is currently only expected from ActiveSync servers; situations
 # like gmail over IMAP indicating that IMAP is disabled for the account or
 # domain have their own error code: setup-error-imap-disabled.
-setup-error-not-authorized=The server said you're not authorized to create an account
+setup-error-not-authorized=The server said you’re not authorized to create an account
 # The error for when the server is not good enough to be supported
 # because it is missing the required features.
 setup-error-pop-server-not-great=Server unsupported. The POP3 server does not implement required features.
