--- a/apps/homescreen/locales/homescreen.en-US.properties
+++ b/apps/homescreen/locales/homescreen.en-US.properties
@@ -36,12 +36,12 @@ loadingEvme2=Loading…
 
 #See bug 838634 for why those keys are still here
 evme-searchbar-default=Everything…
-evme-searchbar-default2=I'm thinking of…
-evme-searchbar-default2.placeholder=I'm thinking of…
+evme-searchbar-default2=I’m thinking of…
+evme-searchbar-default2.placeholder=I’m thinking of…
 evme-searchbar-clear=Back
 
 evme-collections=Collections
-evme-searchbar-default.placeholder=I'm thinking of…
+evme-searchbar-default.placeholder=I’m thinking of…
 evme-searchbar-title=Everything
 
 # Helper - in search page, under the search bar
