--- a/apps/system/locales/system.en-US.properties
+++ b/apps/system/locales/system.en-US.properties
@@ -60,15 +60,15 @@ no-recent-apps=No recent apps
 # see shared/permissions/permissions.properties for more context.
 yes=Yes
 no=No
-deny=Don't allow
+deny=Don’t allow
 allow=Allow
-dontshare-geolocation=Don't Share
+dontshare-geolocation=Don’t Share
 share-geolocation=Share
-dontshare-audio-capture=Don't Share
+dontshare-audio-capture=Don’t Share
 share-audio-capture=Share
-dontshare-video-capture=Don't Share
+dontshare-video-capture=Don’t Share
 share-video-capture=Share
-dontshare-media-capture=Don't Share
+dontshare-media-capture=Don’t Share
 share-media-capture=Share
 device-front=Front Camera
 device-back=Back Camera
@@ -176,7 +176,7 @@ error-title={{name}} is having problems
 airplane-is-on=Airplane mode is on
 airplane-is-turned-on={{name}} requires a network connection. Turn off airplane mode from Settings and connect to a Wi-Fi or mobile data network.
 server-not-found=Server not found
-server-not-found-error=Can't find the server at {{name}}.
+server-not-found-error=Can’t find the server at {{name}}.
 network-connection-unavailable=Network connection unavailable
 network-error={{name}} requires a network connection. Try connecting to a Wi-Fi or mobile data network.
 unable-to-connect=Unable to connect
@@ -199,9 +199,9 @@ add-to-home-screen=Add to Home Screen
 crash-dialog2-os={{brandShortName}} just recovered from a crash
 crash-dialog-app={{name}} just crashed
 crash-dialog-message=Would you like to send Mozilla a report about the crash to help us fix the problem? (Reports are sent over Wi-Fi only.)
-crash-info-link=What's in a crash report?
+crash-info-link=What’s in a crash report?
 crash-always-report=Always send Mozilla a report when a crash occurs.
-crash-dont-send=Don't Send
+crash-dont-send=Don’t Send
 crash-end=Send Report
 
 # "Crash Reports" information page
