--- a/apps/sms/locales/sms.en-US.properties
+++ b/apps/sms/locales/sms.en-US.properties
@@ -44,9 +44,9 @@ composeMessage.dataset.placeholder = Message
 composeSubject.placeholder = Subject
 converted-to-mms           = Converting to multimedia message.
 converted-to-sms           = Converting to text message.
-messages-max-length-text   = You've reached the maximum length.
+messages-max-length-text   = You’ve reached the maximum length.
 messages-max-subject-length-text = Maximum length of subject reached.
-messages-exceeded-length-text = You've exceeded the maximum length. Remove special characters or shorten the message to send it.
+messages-exceeded-length-text = You’ve exceeded the maximum length. Remove special characters or shorten the message to send it.
 newMessage                 = New message
 sendMessage                = Send message
 no-recipient         = (No recipient)
@@ -99,7 +99,7 @@ replace-draft               = Replace existing Draft
 save-as-draft               = Save as Draft
 discard-message             = Discard
 discard-sms                 = Are you sure you want to discard this message?
-discard-new-message         = Discard the message you're composing and open the new message?
+discard-new-message         = Discard the message you’re composing and open the new message?
 resend-confirmation         = The message could not be sent. Try again?
 deleteMessages-confirmation = Delete selected messages?
 deleteThreads-confirmation2 = Delete selected message threads?
@@ -132,10 +132,10 @@ sendNoSignalErrorTitle      = No network coverage
 sendNoSignalErrorBody       = Make sure you have a mobile signal and try again.
 sendNoSignalErrorBtnOk      = OK
 sendNotFoundErrorTitle      = Message not found
-sendNotFoundErrorBody       = The message you're looking for is no longer available.
+sendNotFoundErrorBody       = The message you’re looking for is no longer available.
 sendNotFoundErrorBtnOk      = OK
 sendInvalidAddressErrorTitle     = Invalid number
-sendInvalidAddressErrorBody      = Make sure the mobile number you're sending to is valid.
+sendInvalidAddressErrorBody      = Make sure the mobile number you’re sending to is valid.
 sendInvalidAddressErrorBtnOk     = OK
 deleted-sms                 = This message has already been deleted.
 view-attachment-image       = View
