Bug 950857 - Rename 'Collections' to 'Smart Collections' [r=ranbena]

--- a/apps/homescreen/locales/homescreen.en-US.properties
+++ b/apps/homescreen/locales/homescreen.en-US.properties
@@ -10,7 +10,7 @@ wrapper-search-name={{topic}} on {{name}}
 
 # Dialog that appears when a user long taps on the homescreen
 contextmenu-add-wallpaper=Change Wallpaper
-contextmenu-add-collections=Add Collection
+contextmenu-add-smart-collections=Add Smart Collections
 
 # Prompt that appears when a user tries to delete an app.
 delete-title=Delete {{name}}
@@ -40,7 +40,6 @@ evme-searchbar-default2=I’m thinking of…
 evme-searchbar-default2.placeholder=I’m thinking of…
 evme-searchbar-clear=Back
 
-evme-collections=Collections
 evme-searchbar-default.placeholder=I’m thinking of…
 evme-searchbar-title=Everything
 
@@ -67,10 +66,9 @@ evme-appsmore-loading=Loading…
 
 evme-alert-app-install-confirm=Add {{name}} to Home Screen?
 evme-alert-app-install-exists={{name}} was already added to Home Screen
-evme-alert-offline-collections-more=Connect to the internet to add more collections
-evme-alert-save-collection=Add as Collection?
+evme-alert-offline-smart-collections-more=Connect to the internet to add more Smart Collections
 evme-alert-save-wallpaper=Set as wallpaper?
-evme-alert-no-more-collections=No Collections to add
+evme-alert-no-more-smart-collections=No Smart Collections to add
 evme-banner-app-install-success={{name}} added to Home Screen
 evme-banner-save-wallpaper=Wallpaper set successfully
 
@@ -79,14 +77,13 @@ evme-shortcuts-more=More
 
 evme-collectionssuggest-loading=Loading…
 evme-collectionssuggest-loading-cancel=Cancel
-evme-collectionssuggest-prompt-create=Create your own collection
+evme-collectionssuggest-prompt-create-custom=Create your own Smart Collection
 
 evme-backgroundimage-source-label=Source:
 
 evme-collection-title-prefix=Everything
 evme-collection-title-suffix=Phone
 evme-collection-loading-more=Loading…
-evme-collection-prompt-rename=Rename Collection
 
 # {{query}} will always be the user's current query from the searchbox
 evme-connectionmessage-apps=Connect to the internet to get apps for {{query}}
