Bug_956219_Multiple_Contact_Delete

--- a/apps/communications/contacts/locales/contacts.en-US.properties
+++ b/apps/communications/contacts/locales/contacts.en-US.properties
@@ -223,3 +223,13 @@ organise-contacts              = Organize Contacts
 find-merge-contacts            = Find duplicate contacts
 
 preparing-contacts  = Preparing contacts
+ContactManagementTitle = Contacts Management
+DeleteTitle			= Delete
+bulkDeleteButton	= Bulk Delete
+FetchingContact  	= Fetching contacts
+BulkDelCancel		= Bulk delete cancelled
+DeletedTxt			= deleted
+DeletingContacts	= Deleting contacts
+ContactConfirmDel	= You want continue delete
+Select-Contacts		= Select
+SelectedTxt			= Selected
