Bug 871657 - [system] 'last try.' should start with uppercase letter

--- a/apps/system/locales/system.en-US.properties
+++ b/apps/system/locales/system.en-US.properties
@@ -289,7 +289,7 @@ cckTitle=Enter CCK code
 spckTitle=Enter SPCK code
 newpinTitle=New PIN
 inputCodeRetriesLeft={[ plural(n) ]}
-inputCodeRetriesLeft[one]=last try.
+inputCodeRetriesLeft[one]=Last try.
 inputCodeRetriesLeft[two]={{n}} tries left.
 inputCodeRetriesLeft[few]={{n}} tries left.
 inputCodeRetriesLeft[many]={{n}} tries left.
