--- a/apps/video/locales/video.en-US.properties
+++ b/apps/video/locales/video.en-US.properties
@@ -46,6 +46,8 @@ error-unsupported = Video cannot be played: either because the server or network
 error-unknown = An unknown video error occurred.
 
 storage-setting-button = Media storage settings
+overlay-cancel-button = Cancel
+overlay-camera-button = Go to Camera
 
 name-label = Name
 length-label = Length
