--- a/apps/calendar/locales/calendar.ar.properties
+++ b/apps/calendar/locales/calendar.ar.properties
@@ -93,7 +93,7 @@ month-view-header-format=%B %Y
 single-month-view-header-format=%B
 
 # Header format used for in the day view.
-day-view-header-format=%A %B %e
+day-view-header-format=%b %e, %A
 
 #errors
 error-start-after-end=تاريخ الانتهاء يجب أن يكون بعد تاريخ البدء
