Bug 832367 - Music app fails to send an .ogg file over bluetooth (to Android phone), and won't explain why

--- a/apps/system/locales/system.en-US.properties
+++ b/apps/system/locales/system.en-US.properties
@@ -264,6 +264,14 @@ sdcard-in-use=Bluetooth can not be used while phone is plugged in. Please unplug
 sdcard-no-space2=Can not complete transfer: memory card is full.
 unknown-error=Unknown error
 confirm=Confirm
+transferFailed-title=File transfer failed
+transferFailed-unauthorized=Unauthorized. Authorization has been refused for those credentials.
+transferFailed-forbidden=Forbidden. The server understood the request, but is refusing to fulfill it.
+transferFailed-notAcceptable=Not Acceptable. The resource identified by the request is only capable of generating response entities which have content characteristics not acceptable according to the accept headers sent in the request.
+transferFailed-requestTimeout=Request Timeout. The client did not produce a request within the time that the server was prepared to wait. The client MAY repeat the request without modifications at any later time.
+transferFailed-requestedEntityTooLarge=Requested Entity Too Large. The server is refusing to process a request because the request entity is larger than the server is willing or able to process. The server MAY close the connection to prevent the client from continuing the request.
+transferFailed-unsupportedMediaType=Unsupported Media Type. The server is refusing to service the request because the entity of the request is in a format not supported by the requested resource for the requested method.
+transferFailed-unknownError=Unknown error.
 
 # Media Recoding
 microphone-is-on=Mic is on
