Bug 937968 - [Settings] [Sound] No default value and title on ringer and alert selector page

--- a/apps/ringtones/locales/ringtones.en-US.properties
+++ b/apps/ringtones/locales/ringtones.en-US.properties
@@ -1,5 +1,5 @@
-ringtone-title = Select ringtone
-alerttone-title = Select alert tone
+ringtone-title = Select a tone
+alerttone-title = Select a tone
 done = Done
 
 ringer_classic_prism_ogg = Classic Prism
