Bug 957923 - Fix unit tests for running in DESKTOP=1 environment.

--- a/tests/travis_ci/test_agent/install
+++ b/tests/travis_ci/test_agent/install
@@ -9,4 +9,4 @@ echo 'Downloading & installing node dependencies'
 make common-install
 
 echo 'Downloading xulrunner-sdk and making profile for testing (more than 5 minutes)'
-DEBUG=1 DESKTOP=0 WGET_OPTS=-nv make
+DEBUG=1 WGET_OPTS=-nv make
