--- a/locales/languages_all.json
+++ b/locales/languages_all.json
@@ -3,6 +3,7 @@
   "as"        : "অসমীয়া",
   "ast"       : "Asturianu",
   "be"        : "Беларуская",
+  "bg"        : "български",
   "bn-BD"     : "বাংলা (বাংলাদেশ)",
   "bn-IN"     : "বাংলা (ভারত)",
   "bs"        : "Bosanski",
@@ -36,6 +37,7 @@
   "kn"        : "ಕನ್ನಡ",
   "ko"        : "한국어",
   "lij"       : "Ligure",
+  "mk"        : "Македонски",
   "ml"        : "മലയാളം",
   "ms"        : "Melayu",
   "ne-NP"     : "नेपाली",
