--- a/apps/wappush/locales/wappush.en-US.properties
+++ b/apps/wappush/locales/wappush.en-US.properties
@@ -11,6 +11,7 @@ this-message-has-expired = This message has expired
 
 cp-pin.placeholder = PIN
 cp-message-received = Configuration message received
+cp-message-received-not-processed = Configuration message not processed yet
 cp-container-title = OTA Access Point Configuration
 cp-accept-help = Configuration message received, click on 'Accept' to continue.
 cp-accept-help-pin = The PIN code should have been provided to you by whomever sent you the configuration message.
