Bug 939174 - [user story] edge gesture tutorial outside of FTE

--- a/apps/communications/ftu/locales/ftu.en-US.properties
+++ b/apps/communications/ftu/locales/ftu.en-US.properties
@@ -271,6 +271,11 @@ tutorial-step3-large = Swipe down from top to access recent notifications, credi
 tutorial-step4-large = Tap on an icon to access the application.
 tutorial-step5-large = Swipe up from bottom to go back to the home screen.
 
+
+tutorial-1300-prerelease1400-prerelease-step1-tiny = Swipe from the side of the screen to move back and forth between recent apps.
+tutorial-1300-prerelease1400-prerelease-step2-tiny = Your Browser bookmarks have been moved to the phone’s Home screen to make them easier to access.
+tutorial-1300-prerelease1400-prerelease-step3-tiny = When editing the Home screen, tap on a bookmark to rename it.
+
 #=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#
 # Offline Error Dialog
 #=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#
