--- a/apps/system/locales/system.en-US.properties
+++ b/apps/system/locales/system.en-US.properties
@@ -413,4 +413,5 @@ download_text_by_default={{name}}
 download_downloading_text_2={{percentage}}% - {{name}}
 
 # Rocketbar
+search=Search
 search-or-type-address.placeholder=Search or type address
